ran spell check

--- a/text/appendices.tex
+++ b/text/appendices.tex
@@ -3,19 +3,19 @@
 
 Over the last few years, load growth, increases in intermittent generation,
 declining technology costs and increasing recognition of the importance of
-customer behaviour in energy markets have brought about a change in the
-focus of DR in Europe [Tor10]. The long standing programmes involving large
+customer behavior in energy markets have brought about a change in the
+focus of DR in Europe [Tor10]. The long standing programs involving large
 industries, through interruptible tariffs and time of day pricing, have been
-increasingly complemented by programmes aimed at commercial and residential
+increasingly complemented by programs aimed at commercial and residential
 customer groups.
 
 \cite{torriti_demand_2010} Tor10] examines experiences within European countries as well as at
-European Union (EU) level. While business programmes, technical and economic
+European Union (EU) level. While business programs, technical and economic
 potentials vary across Europe, there are common reasons as to why
 coordinated DR policies have been slow to emerge: the limited knowledge on
 DR energy saving capacities; high cost estimates for DR technologies and
 infrastructures; and policies focused on creating the conditions for
-liberalising the EU energy markets.
+liberalizing the EU energy markets.
 
 
 advances in DR It describes initiatives, studies and policies of various
@@ -24,22 +24,22 @@ European countries, with in-depth case studies of the UK, Italy and Spain.
 Spees, K., {\&} Lave, L. B. (2007). Demand Response and Electricity Market
 Efficiency. \textit{The Electricity Journal}, \textit{20}(3), 69--85. doi:10.1016/j.tej.2007.01.006
 
-Interruptible Programmes represent 6.5{\%} of peak power and Load Shedding
-Programmes initiate automatic load shedding in emergency situations [30].
-With Interruptible Programmes participants are required to reduce their load
-to predefined values. With Load Shedding Programmes utilities have the
+Interruptible Programs represent 6.5{\%} of peak power and Load Shedding
+Programs initiate automatic load shedding in emergency situations [30].
+With Interruptible Programs participants are required to reduce their load
+to predefined values. With Load Shedding Programs utilities have the
 possibility to remotely shutdown participants' equipment at short notice.
-One significant difference between these two programmes is that for
-Interruptible Programmes participants who do not respond can face penalties.
+One significant difference between these two programs is that for
+Interruptible Programs participants who do not respond can face penalties.
 
 
-Load Shedding Programmes are divided into real time programmes (without
-notice) and 15 min notice programmes. The size ranges from 1200 MW for real
-time programmes to 1750 MW for notice programmes. Participants in these
-programmes have to install and maintain Load Shedding Peripheral Units and
+Load Shedding Programs are divided into real time programs (without
+notice) and 15 min notice programs. The size ranges from 1200 MW for real
+time programs to 1750 MW for notice programs. Participants in these
+programs have to install and maintain Load Shedding Peripheral Units and
 will be compensated according to a non-market price defined in regulation.
-The size of curtailable power is of 10 MW for programmes without notice and
-3 MW for programmes with notice.
+The size of curtailable power is of 10 MW for programs without notice and
+3 MW for programs with notice.
 
 Load forecasting is very important for power system operation and planning.
 Traditional load forecasting tools have limitations to reflect DR customer
