--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -47,7 +47,7 @@ cooling, compute systems, storage, networks, racks, etc.
 of the First ACM Workshop on Embedded Sensing Systems for Energy-Efficiency
 in Buildings, New York, NY, USA, 2009, pp. 13--18.
 
-Apportioning the total energy consumption of a building or organisation to
+Apportioning the total energy consumption of a building or organization to
 individual users may provide incentives to make reductions. We explore how
 sensor systems installed in many buildings today can be used to apportion
 energy consumption between users. We investigate the differences between a
@@ -59,7 +59,7 @@ challenges for future sensor systems in this area.
 
 \begin{itemize}
 \item If accounting data can be used to forecast and model future energy usage of an HPC center? so this can be communicated and be in
-egrated with electricity grid.
+integrated with electricity grid.
 \item If/how electricity grid providers can use energy and usage accounting data to plan electricity provisioning of an HPC center?
 \item user-specific accounting data versus workload-specific accounting data.
 \item accounting data in terms of HPC center components, cooling, systems, lighting, etc.
