--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -1,5 +1,5 @@
 The responses to the questionnaire presented in
-Section~\ref{sec:questionaire} represent a variety of desires and
+Section~\ref{sec:questionnaire} represent a variety of desires and
 experience regarding interactions between supercomputing centers and
 energy service providers.  For example, the responses from the two centers
 with the largest power draws, Lawrence Livermore National Laboratory
@@ -23,7 +23,7 @@ of integration.
 % willingly negotiate with energy service providers because the cost of
 % the lost opportunity is too high since the remaining costs are
 % unchanged.
-The responses to the questionaire also suggest that some energy service
+The responses to the questionnaire also suggest that some energy service
 providers are requesting that their supercomputing center customers
 develop capabilities for informing the provider of expected periods of
 exceptional power consumption and for responding to requests from the
@@ -45,13 +45,13 @@ center could make undertaking such a project worthwhile.
 Perhaps one of the most straightforward ways that supercomputing
 centers can begin the process of developing a demand-response
 capability is by enhancing existing system software used for managing
-computing resources within the center.  Indeed, the questionaire
-responses from Section~\ref{sec:questionaire} as well as the literature
+computing resources within the center.  Indeed, the questionnaire
+responses from Section~\ref{sec:questionnaire} as well as the literature
 review presented in Section~\ref{sec:priorwork} both strongly support the
 idea that the greatest opportunities for supercomputing centers to
 develop integration capabilities are related to system software.
 Specifically, and presented in approximate order of decreasing
-interest and expected impact to the questionaire respondents, system
+interest and expected impact to the questionnaire respondents, system
 software in this context consists of coarse-grained power management
 in the form of power capping, job scheduling, load migration,
 rescheduling backups, and fine-grained power management.  Of these,
@@ -113,9 +113,9 @@ CPU's frequency and voltage operating points which in turn causes the
 processor to consume less power directly and to produce less thermal
 load indirectly.  In cases where a processor is executing a
 processing-intense task, gating the processor's P-state often has a
-noticable impact on the overall task performance; however, in cases
+noticeable impact on the overall task performance; however, in cases
 where a processor is executing a mostly I/O-bound task, gating the
-processor's P-state typically does not make a noticable impact on the
+processor's P-state typically does not make a noticeable impact on the
 overall task performance due to the fact that the processor spends a
 great deal of time blocked waiting for I/O operations to complete.
 
@@ -144,7 +144,7 @@ day-to-day operation of the center and to demand-response capabilities.
 
 % It may be possible to self-cite some of my upcoming publications
 % that discuss how to do power capping in a scheduler.
-Several of the ideas described in the preceeding paragraphs assume
+Several of the ideas described in the preceding paragraphs assume
 that the supercomputing center environment has some amount of
 instrumentation and metering that allows for the collection of power
 telemetry data.  Not only is this telemetry necessary for the job
@@ -163,7 +163,7 @@ data should be retained for electricity provisioning planning purposes.
 At a very high level, this detailed knowledge of where electricity is
 being used in a supercomputing center is an important piece in
 capabilities such as power capping, where the overall consumption of
-power is maintained at or below some maximum threshhold level.  Power
+power is maintained at or below some maximum threshold level.  Power
 capping may be accomplished either manually by the facility manager
 or automatically by the job scheduler, but both approaches require
 detailed knowledge that come from monitoring and accounting.
@@ -173,7 +173,7 @@ with each other in scenarios in which computational loads are migrated
 from one site to another where energy costs are less expensive.  This
 scenario is challenging for both technical reasons and business reasons.
 Technical challenges include issues such as user authentication and
-autorization (i.e., a user may be authorized to use resources at one
+authorization (i.e., a user may be authorized to use resources at one
 site but not at another site) and data movement (i.e., it may be
 infeasible to migrate large datasets from one site to another site).
 Business challenges include the notion that a supercomputing center
@@ -195,7 +195,7 @@ effective demand-response capabilities.
 Finally, this Section has focused heavily on the opportunities available
 to supercomputing centers that come from developing demand-response
 capabilities.  This notion is primarily due to the fact that the
-questionnaire presented in Section~\ref{sec:questionaire} was
+questionnaire presented in Section~\ref{sec:questionnaire} was
 distributed to high-performance computing centers in the United
 States, not to energy service providers.  That said, opportunities do
 exist for energy service providers that develop demand-response
