--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -36,7 +36,7 @@ management \textbf{knobs}, such as DVFS [Fan07].
 The problem of scheduling jobs has been extensively studied. In general,
 most of the schedulers implement the First Come First Served (FCFS) policy
 as a simple but fair strategy for scheduling jobs. But this policy suffers
-from low system utilization. The most commonly used optimization is backfill
+from low system utilization. The most commonly used optimization is backfilling
 \cite{lifka_anl/ibm_1995} 
 \cite{mualem_utilization_2001}
 \cite{feitelson_parallel_2004}
@@ -54,7 +54,7 @@ The novelty of the proposed job scheduling
 mechanism is its ability to take \textit{the variation of 
 electricity price }into consideration as a means to make
 better decisions of the timing of scheduling jobs with diverse power
-profiles. Experimentations on an IBM Blue Gene/P and a cluster system as
+profiles. Experiments on an IBM Blue Gene/P and a cluster system as
 well as a case study on Argonne's 48-rack IBM Blue Gene/Q system have
 demonstrated the effectiveness of this scheduling approach. Preliminary
 results show a \textbf{23{\%}} reduction in electricity cost of HPC systems.
