--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -37,7 +37,7 @@ Fname Lname}
 \texttt{http://web/page.html}
 \and
 Another Institute,
-nstitute Department, address1,\\
+Institute Department, address1,\\
 address2, Country}
 
 \maketitle              % typeset the title of the contribution
@@ -82,8 +82,8 @@ in the United States.
 \label{sec:priorwork}
 
 \section{Questionnaire} 
-\input{questionaire}
-\label{sec:questionaire}
+\input{questionnaire}
+\label{sec:questionnaire}
 
 \section{Opportunities/Solutions and Barriers} 
 \input{opportunities}
