--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -20,7 +20,7 @@ National Center for Atmospheric Research,
 IBM Corporation, 
 National Energy Technology Laboratory, Indiana University, 
 Texas Advanced Computing Center, 
-Sandia Natinal Laboratory, 
+Sandia National Laboratory, 
 National Renewable Energy Laboratory, 
 National Aeronautics and Space Administration). The questionnaire was
 sent to a sample that was not randomly selected. It was sent to those sites
@@ -33,7 +33,7 @@ and, of those, 2 responded (Intel and National Oceanic and Atmospheric Administr
 The total power load as well as the intra-hour fluctuation of these sites
 varied significantly. There were four sites with total power load greater
 than 10MW, two sites with \textasciitilde 5MW total power load and five
-sites with less than 2MW total power load. We chose less than 3MW intra hour
+sites with less than 2MW total power load. We chose less than 3MW intra-hour
 variability as the bottom of the scale because we assumed that the
 electrical service providers would not be affected by 3MW (or less) 
 fluctuations. For those with total power load greater than 10MW, the
