ESP and supercomputer

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -73,9 +73,9 @@ in the United States.
 \input{intro}
 \label{sec:intro}
 
-\section{Supercomputing Centers and Electrical Grid Integration}
-\input{supercomputingcenters}
-\label{sec:supercomputing}
+\section{Supercomputer Centers and Electrical Grid Integration}
+\input{supercomputercenters}
+\label{sec:supercomputer}
 
 \section{Prior Work}
 \input{priorwork}
