--- a/text/intro.tex
+++ b/text/intro.tex
@@ -1,11 +1,11 @@
 Supercomputer centers with petascale systems for high-performance 
 computing (HPC) are realizing the large impact they will be 
-putting on their electricity service providers with peak power demands of 20MW and instantaneous power fluctuations of 8MW. 
+putting on their energy service providers with peak power demands of 20MW and instantaneous power fluctuations of 8MW. 
  
 The Energy Efficient HPC Working Group 
 (\href {http://eehpcwg.lbl.gov/}{EE HPC WG}) 
-has been investigating opportunities for large supercomputing sites to more closely 
-integrate with their electricity service providers. This paper documents the 
+has been investigating opportunities for large supercomputer sites to more closely 
+integrate with their energy service providers. This paper documents the 
 results of this investigative activity. 
 
 Leveraging prior work on data center and grid integration opportunities done
@@ -14,7 +14,7 @@ by Lawrence Berkeley National Laboratory's (LBNL) Demand Response Research Cente
 {http://drrc.lbl.gov/publications/demand-response-and-open-automated-demand-response-opportunities-data-centers}{http://drrc.lbl.gov/publications}),
  this paper takes as a starting point LBNL's model for integrating data
 centers and the electrical grid. The model describes programs that are used
-by the electricity service providers to integrate with their customers (such
+by the energy service providers to integrate with their customers (such
 as demand response) and methods used to balance the grid supply and demand
 of electricity. It also describes strategies that data centers might employ
 for managing their electricity and power requirements. This paper tuned this
@@ -23,7 +23,7 @@ have very high system utilization and are not likely to use virtualization as a 
 Also, supercomputer applications are generally not easily portable between 
 geographic locations for a variety of reasons; security, data-locality, system tuning. 
 Therefore, although included in the model for data centers, both virtualization and geographic load shifting were eliminated as
-potential supercomputing center strategies.
+potential supercomputer center strategies.
 
 
 The first section of this paper describes in greater detail the model for
@@ -31,7 +31,7 @@ integrating supercomputer centers and the electrical grid. The second
 section is a review of prior work on HPC center strategies that might be
 deployed for managing electricity and power. In order to further understand
 today's relationships, potential partnerships and possible integration
-between HPC centers, their electricity providers and the grid, a
+between HPC centers, their energy providers and the grid, a
 questionnaire was deployed whose respondents were Top100 List class
 supercomputer centers in the United States. The third section of this paper
 describes the results of that questionnaire. The fourth section of the paper
