datacenter and energy service provider

--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -1,4 +1,6 @@
 
+%This section is a work in progress
+%
 \begin{enumerate}
 \item Potential HPC-specific value proposition for active DR engagement
 \item Based on Grid Integration solutions -- local and system-wide impacts
