--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -23,6 +23,7 @@ of integration.
 % willingly negotiate with energy service providers because the cost of
 % the lost opportunity is too high since the remaining costs are
 % unchanged.
+
 The responses to the questionnaire also suggest that some energy service
 providers are requesting that their supercomputer center customers
 develop capabilities for informing the provider of expected periods of
@@ -63,6 +64,7 @@ datacenter.
 % concepts such as ``priority'' and ``urgency'' described in the
 % following paragraph.  If desired, we would need to add these
 % papers into the bibliography and/or related works section.
+
 On one hand, the job scheduler has knowledge of and control over the
 upcoming workflow within the supercomputer center simply by examining
 and manipulating the job queue.  For example, jobs may be submitted
@@ -144,6 +146,7 @@ day-to-day operation of the center and to demand-response capabilities.
 
 % It may be possible to self-cite some of my upcoming publications
 % that discuss how to do power capping in a scheduler.
+
 Several of the ideas described in the preceding paragraphs assume
 that the supercomputer center environment has some amount of
 instrumentation and metering that allows for the collection of power
@@ -171,7 +174,7 @@ detailed knowledge that come from monitoring and accounting.
 Opportunities may also exist for supercomputer centers to cooperate
 with each other in scenarios in which computational loads are migrated
 from one site to another where energy costs are less expensive.  This
-scenario is challenging for both technical reasons and business reasons.
+scenario is challenging for both technical and business reasons.
 Technical challenges include issues such as user authentication and
 authorization (i.e., a user may be authorized to use resources at one
 site but not at another site) and data movement (i.e., it may be
