--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -1,7 +1,7 @@
-We used a questionnaire in order to understand the current experiences of
-supercomputer center's interaction with their electricity
+We used a questionnaire to understand the current experiences of a
+supercomputer center's interaction with their energy
 service providers. We restricted the analysis to sites in the United States
-since the results of the survey and practices of demand response is highly
+because the results of the survey and practices of demand response is highly
 correlated and driven by energy policies in the country. 
 \cite{torriti_demand_2010}
 [Tor10].
@@ -102,7 +102,7 @@ daily \\
 \end{center}
 \end{table}
 
-We asked if the supercomputer centers had talked to their electric service
+We asked if the supercomputer centers had talked to their energy service
 providers about programs and methods used to balance the grid supply and
 demand of electricity. About half of them have had some discussion, but it
 has mostly been limited to demand side and not supply-side programs.
@@ -114,7 +114,7 @@ has mostly been limited to demand side and not supply-side programs.
 \caption{Caption Number 2}
 \begin{tabular}{|p{230pt}|l|}
 \hline
-\textbf{Discussions with Electricity Providers}&
+\textbf{Discussions with Energy Providers}&
 {\%} Answered Yes \\
 \hline
 \textbf{Demand-side programs}&
@@ -192,29 +192,29 @@ cycle).''
 Given the low levels of current engagement between the electricity service
 providers and the supercomputer centers, it is not surprising that none of
 the supercomputer centers are currently using any power management
-strategies to respond to grid requests by their electrical service
+strategies to respond to grid requests by their energy service
 providers. SDSC's \textit{supercomputer center} is not an exception, but they did respond that their
 entire ``campus is leveraging parallel electrical distribution to trigger
-diesel generators and other back-up resources to respond to to grid and
+diesel generators and other back-up resources to respond to grid and
 non-grid requests.''
 
 We tried to evaluate if power management strategies will be considered
 relevant and effective for grid integration at some point in the future. Two
-questions were asked; is there interest in using the strategies and what
-impact did they think that the strategies would have. When combining
+questions were asked: is there interest in using the strategies and what
+impact did they think that the strategies would have? When combining
 interest and impact, the results showed that power capping, shutdown, and
 job scheduling were both potentially interesting and of high impact. Load migration, back-up
-scheduling, fine grained power management and thermal management were medium
-interest and impact. Lighting control and back-up resources were low
+scheduling, fine-grained power management and thermal management were of medium
+interest and impact. Lighting control and back-up resources were of low
 interest and impact.  
 
 Distinguishing interest from impact sheds further insight; some strategies are 
-considered high impact, but not interesting to consider deployment.  Facility
+considered high impact, but not interesting enough to consider deployment.  Facility
 shutdown is rated as having a high impact, but only
-considered interesting by 36 percent of the respondents.  NOAA commented that, 
+considered interesting by 36\% of the respondents.  NOAA commented that, 
 "We've had too many instability and equipment failures to utilize this as a strategy."  This divide is even more
-apparent with load migration.  It is rated as having a high impact by 36 percent of the
-respondents, but only interesting to 10 percent.  
+apparent with load migration.  It is rated as having a high impact by 36\% of the
+respondents, but only interesting to 10\% .  
 
 
 \begin{table}[htbp]
@@ -227,7 +227,7 @@ respondents, but only interesting to 10 percent.
 \textbf{\%} &
 \textbf{\%} \\
 
-\textbf{Electricity Provider requests} &
+\textbf{Energy Provider requests} &
 \textbf{Interested} &
 \textbf{High} &
 \textbf{Medium} \\
@@ -255,7 +255,7 @@ Re-scheduling back-ups &
 10 \\
 \hline
 
-Fine grained power management &
+Fine-grained power management &
 27 &
 0 &
 36 \\
@@ -292,7 +292,7 @@ Use back-up resources (e.g., generators) &
 %\caption{Caption Number 3}
 %\begin{tabular}{|p{299pt}|}
 %\hline
-%\textbf{HPC strategies for responding to Electricity Provider requests (listed from highest to lowest interest }$+$\textbf{ impact)} \\
+%\textbf{HPC strategies for responding to Energy Provider requests (listed from highest to lowest interest }$+$\textbf{ impact)} \\
 %\hline
 %Coarse grained power management \\
 %\hline
