--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -1,9 +1,9 @@
 The EE HPC WG Team took as their starting point a model developed by LBNL's 
 Demand Response Research Center \footnote{LBNL
 Data Center Grid Integration Activities: http://drrc.lbl.gov/projects/dc} that
-describes ways in which data centers and electricity service providers may
+describes ways in which data centers and energy service providers may
 interact and how this integration can advance new market opportunities. This
-integration model describes programs that are used by the electricity service
+integration model describes programs that are used by the energy service
 providers to encourage particular behaviors by their customers and methods used
 to balance the grid supply and demand of electricity. It also describes
 strategies that data centers might employ for utility programs to manage their
@@ -16,13 +16,13 @@ general data center).
 
 \subsection{Electricity Demand and Supply Side Management}
 
-Electricity providers use demand-side management for both energy efficiency and to balance the electricity supply. 
+Energy providers use demand-side management for both energy efficiency and to balance the electricity supply. 
 Demand side management programs are used to manage the electricity consumption on the consumer’s side of the meter.  
 Demand side management can include energy conservation, energy efficiency and peak load management, and responses to 
 changing supply conditions.  The focus for this paper is on programs that are targeted at load management. 
 Supply side management methods are used to ensure the efficient generation, transmission and distribution of 
 electricity.  These methods 
-manage the supply of energy on the electricity provider’s side of the meter to meet the changing demand conditions. 
+manage the supply of energy on the energy provider’s side of the meter to meet the changing demand conditions. 
 
 There are many different ways that the end-users of electricity can modify or change their electricity consumption. 
 The following is a list and 
