--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -1,11 +1,11 @@
-The prior work described in this paper is that which addresses strategies
+The prior work described in this paper addresses strategies
 that HPC centers can take to manage power. A lot of work has been done on
-energy efficiency, some of which has an element of power management. But,
+energy efficiency, some of which has an element of power management; but,
 there is not a lot work that is specifically focused on power management in
 response to a request from an electrical service provider.
 
 \subsection{Fine Grained Power Management}
-In \cite{varma_control-theoretic_2003} (Varma et al., 2003) system level DVFS techniques demonstrated. They
+In \cite{varma_control-theoretic_2003} (Varma et al., 2003) demonstrate system-level DVFS techniques. They
 monitor CPU utilization at regular intervals and then perform dynamic
 scaling based on their estimate of utilization for the next interval.
 
@@ -21,13 +21,13 @@ efficiency and power balance in the system.
 \subsection{Power Capping}
 
 \textbf{Power capping }techniques set a value below the actual peak power
-and preventing that number from being exceeded through some type of control
+and prevent that number from being exceeded through some type of control
 loop [Fan07]. There are numerous ways to implement this, but they generally
 consist of a \textbf{power monitoring system }such as a power estimation
 method or one based on direct power sensing, and a \textbf{power throttling
 mechanism}. Power throttling generally works best when there is \textbf{a
 set of jobs with loose service level guarantees or low priority }that can be
-forced to reduce consumption when the data center is approaching \textbf{the
+forced to reduce consumption when the datacenter is approaching \textbf{the
 power cap value}. Power consumption can be reduced simply by
 \textbf{de-scheduling tasks }or by using any available component-level power
 management \textbf{knobs}, such as DVFS [Fan07].
@@ -40,27 +40,28 @@ from low system utilization. The most commonly used optimization is backfilling
 \cite{lifka_anl/ibm_1995} 
 \cite{mualem_utilization_2001}
 \cite{feitelson_parallel_2004}
-[Lif95, Mua95, Fei04]. Backfilling is proposed to improve the system
-utilization. Backfilling by identifying free capacities allows the smaller
-jobs fit those capacities to move forward and run on idle processors.
+[Lif95, Mua95, Fei04], which is proposed to improve system
+utilization. By identifying free capacities backfillin allows smaller
+jobs that fit those capacities to move forward and run on idle processors.
 
 In [Yang ref is not in Zotero] 
 \cite{zhou_reducing_2013}
 [Yang13] and [Zhou13] , \textbf{job scheduling} as a DR strategy and
 \textbf{dynamic pricing} as a grid integration program have been used to
 propose \textbf{a power-aware job scheduling} approach to reduce
-\textbf{electricity costs} \textit{without degrading the system utilization}. 
+\textbf{electricity costs} \textit{without degrading system utilization}. 
 The novelty of the proposed job scheduling
 mechanism is its ability to take \textit{the variation of 
-electricity price }into consideration as a means to make
+the price of electricity }into consideration as a means to make
 better decisions of the timing of scheduling jobs with diverse power
 profiles. Experiments on an IBM Blue Gene/P and a cluster system as
 well as a case study on Argonne's 48-rack IBM Blue Gene/Q system have
 demonstrated the effectiveness of this scheduling approach. Preliminary
-results show a \textbf{23{\%}} reduction in electricity cost of HPC systems.
+results show a \textbf{23{\%}} reduction in the cost of electricity for HPC systems.
+
 
 A grid computing infrastructure with large amount of computations normally
-contains parallel machines (supercomputers cluster) as main computational
+contains parallel machines (a supercomputer cluster) as main computational
 resources.  \cite{foster_anatomy_2001} [Fos01]
 Incoming jobs to Grid's local resources are scheduled by
 local scheduling system. Local scheduling system for parallel machines
@@ -68,19 +69,19 @@ typically use batch queued space-sharing and its variants as scheduling
 policies. Most current local schedulers use backfilling strategies with FCFS
 queue-priority order as policy for parallel job scheduling.
 
-There are many use cases in grid computing environment that require QoS
+There are many use cases in a grid computing environment that require QoS
 guarantees in terms of guaranteed response time, including time-critical
 tasks that must meet a deadline, which would be impossible without a start
-time guarantee. Furthermore providing time guarantee enable the job to be
-coordinated with other activities, essential for co-allocation and workflows
+time guarantee. Furthermore, providing a time guarantee enables the job to be
+coordinated with other activities, essential for co-allocation and workflow
 applications. Advance reservation is a guarantee for the availability of a
 certain amount of resources to users and applications at specific times in
 the future 
-\cite{foster_distributed_1999} [Fos99]. Advance reservation feature requires local scheduling
-systems to support a reservation capability beside batch queued policy for
+\cite{foster_distributed_1999} [Fos99]. The advance reservation feature requires local scheduling
+systems to support a reservation capability beside a batch-queued policy for
 local and normal jobs. In load migration, we encounter the need to deliver
 resources at specific times in order to accept jobs from other HPC centers
-to respond to their demand enforced by electricity grid. This requirement
+to respond to their demand enforced by the electricity grid. This requirement
 can be achieved by advance reservations 
 \cite{foster_distributed_1999}
 [Fos99]. Modern resource management
@@ -94,7 +95,7 @@ In order to balance the electrical grid,
 [Chiu12] proposes a low-cost
 \textbf{geographic load migration} to match electricity supply. In addition,
 authors present a real grid balancing problem experienced in the Pacific
-Northwest. They propose a symbiotic relationship between data centers and
+Northwest. They propose a symbiotic relationship between datacenters and
 electrical grid operators by showing that \textbf{mutual cost benefits }can
 be accessible.
 
