--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -1,62 +1,63 @@
 The EE HPC WG Team took as their starting point a model developed by LBNL's 
 Demand Response Research Center \footnote{LBNL
 Data Center Grid Integration Activities: http://drrc.lbl.gov/projects/dc} that
-describes ways in which data centers and energy service providers may
+describes challenges and opportunities in which data centers and energy service providers may
 interact and how this integration can advance new market opportunities. This
 integration model describes programs that are used by the energy service
 providers to encourage particular behaviors by their customers and methods used
 to balance the grid supply and demand of electricity. It also describes
 strategies that data centers might employ for utility programs to manage their
-electricity and power requirements and lower costs. The EE HPC WG Team adopted
+electricity and power requirements to lower costs and benefit from utility incentives. The EE HPC WG Team adopted
 this model with slight tweaks to reflect the HPC environment (versus the
 general data center).
 
 %\href{http://drrc.lbl.gov/publications/demand-response-and-open-automated-demand-response-opportunities-data-centers}
 %{http://drrc.lbl.gov/publications}
 
-\subsection{Electricity Demand and Supply Side Management}
+\subsection{Electricity Supply and Demand Side Management}
 
-Energy providers use demand-side management for both energy efficiency and to balance the electricity supply. 
+Energy providers support demand-side management for both energy efficiency and to balance the electricity supply (e.g., peak summer afternoons). 
 Demand side management programs are used to manage the electricity consumption on the consumer’s side of the meter.  
 Demand side management can include energy conservation, energy efficiency and peak load management, and responses to 
-changing supply conditions.  The focus for this paper is on programs that are targeted at load management. 
-Supply side management methods are used to ensure the efficient generation, transmission and distribution of 
+changing supply conditions (e.g., demand response). Some of these consumer actions are in response to notifications (day-ahead or day-of) from the energy providers. The focus for this paper is on programs that are targeted at load management to improve electric grid reliability. 
+Management of electricity supply are used to ensure the efficient and reliable generation, transmission and distribution of 
 electricity.  These methods 
-manage the supply of energy on the energy provider’s side of the meter to meet the changing demand conditions. 
+manage the supply of energy on the energy provider’s side to meet the changing demand conditions and any supply incontigencies. 
 
-There are many different ways that the end-users of electricity can modify or change their electricity consumption. 
-The following is a list and 
-brief definitions of key supply-side programs and demand-side management strategies that HPC data centers can utilize:
+There are many different ways that the end-users of electricity or consumers can modify or change their electricity use. 
+The following is a key list and 
+brief definitions of key supply-side programs and demand-side management strategies that HPC data centers can utilize. 
+Consumers' strategies are typically in response to support one or many of these supply-side programs.
 
 
 
 \begin{itemize}
 \item SUPPLY SIDE PROGRAMS
-\item Peak Load Response: Programs designed for responses during peak hour “events” and focus on reducing peaks on 
+\item System Peak Load: Programs designed for responses during peak hour “events” and focus on reducing peaks on 
 forecasted high-system load days. 
-\item Reliability Response: These programs are designed for fastest, shortest duration responses. 
+\item Continuous Grid Reliability: These programs are designed for fastest, shortest duration responses. 
 Response is only required during power system and intra-hour variability “events” that typically cannot be forecasted.
-\item Regulation Response (Up or Down): Programs designed to follow minute-to-minute commands from the grid to 
+\item Regulation Management (Up or Down): Programs designed to follow minute-to-minute commands from the grid to 
 balance the aggregate system load and generation. These programs can be expanded to manage the variable and 
 uncertain generation nature of many renewable resources, supplement the methods for grid scale storage, which is 
 used to store electricity on a large scale to meet the system ramping (up or down) requirements. Pumped-storage 
 hydroelectricity is currently one of the largest forms of grid energy storage. Such 
 responses can also be used for frequency response, which are methods used to keep grid frequency constant 
 and in-balance.
-\item Congestion Response: Methods used to resolve congestion that occurs when there is not enough transmission 
+\item Congestion Management: Methods used to resolve congestion that occurs when there is not enough transmission 
 capability to support all requests for transmission services.  Or, methods used to resolve congestion 
 that occurs when the distribution control system is overloaded. Peak response can be expanded for 
 congestion management.
 \item Dynamic Pricing: Day-ahead and day-off pricing programs that are designed to change dynamically in response 
 to system load and generation conditions.  
 \item DEMAND SIDE MANAGEMENT STRATEGIES
-\item Load Shed: Strategies used to reduce the load consumption during peak times, 
+\item Load Shed: Strategies used to reduce the load consumption during system peaks, 
 where the reduced load is not used at a later time.
 \item Load Shift:  Strategies where the load during peak times is moved to, typically, non-peak hours.
 \item Price Response:  Strategies for time varying and real-time pricing programs used to motivate modification 
 to electricity consumption. 
-\item Continuous Energy Management: Emerging strategies that modify the load consumption (increase or decrease) 
-based on intra-hour changing supply conditions.
+\item Continuous or Real-time response: Emerging strategies that modify the load consumption (increase or decrease) 
+based on intra-hour changing supply conditions on daily basis.
 \end{itemize}
 
 As the electric grid evolves to a more dynamic and distributed system, its integration with and responses from 
