--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -1,8 +1,11 @@
 The prior work described in this paper addresses strategies
 that HPC centers can take to manage power. A lot of work has been done on
 energy efficiency, some of which has an element of power management; but,
-there is not a lot work that is specifically focused on power management in
-response to a request from an electrical service provider.
+there is not a lot work that is specifically focused on data center power management (both cooling systems and IT equipment) in
+response to a request from an electrical service provider \cite{INSERT PAPER} (Ghatikar et al., 2012a).
+
+Most of the prior work mentioned in this section is focused on HPC systems. 
+Since SC cooling requirement is a derivative of IT equipment, any strategy that lowers the amount of heat generated could be compensated by lowered cooling.
 
 \subsection{Fine Grained Power Management}
 In \cite{varma_control-theoretic_2003} (Varma et al., 2003) demonstrate system-level DVFS techniques. They
@@ -98,6 +101,11 @@ authors present a real grid balancing problem experienced in the Pacific
 Northwest. They propose a symbiotic relationship between datacenters and
 electrical grid operators by showing that \textbf{mutual cost benefits }can
 be accessible.
+
+ \cite{INSERT PAPER} 
+ (Ghatikar et al., 2012b) looks at two applied cases of distributed data centers.
+ The results show that load migration is possible in both homogenous and heterogenous systems. 
+ Although the migration strategies were through a manual process, the responses could benefit from automation.
 
 \subsection{Thermal Management}
 Thermal and cooling metrics are becoming important metrics in scheduling and
