--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -1,4 +1,3 @@
-
 %This section is a work in progress
 %
 \begin{enumerate}
@@ -7,14 +6,21 @@
 \item Next steps -- specific directions or target areas to focus
 \end{enumerate}
 
-Electricity providers have viewed the hourly, daily, and seasonal
+In past, electricity providers have viewed the hourly, daily, and seasonal
 fluctuations of demand as facts of life. These fluctuations required
 additional generating capacity, particularly peaking plants that were needed
-only a few hours per year.
+only a few hours per year. 
 
-DR adoption: automation
+However, with increasing adoption of Smart Grid, information technology, communications, and a more dynamic and reslient grid, 
+the value proposition of replacing the expensive and fossil-based peaking plants with more predictable demand with forecasting and demand response has the potential for new value proposition to the HPC data centers. 
+The increase in renewable generation and its intermittency offers opportunities for large and flexible loads that can adapt to changing electricity generation and sources.
+
+DR adoption: 
+Automation: 
 %
-automation technologies
+As the previous research as shown with data centers, HPC can also be considered as a resource to the grid and provide different services.
+To enable this, automation technologies, which can link the HPC data centers with the electric grid, 
+and on-site power management strategies for different timescales for grid services will play a key role in ease of adoption and lowering the participation costs.
 
 DR market:
 
