--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -22,19 +22,25 @@ As the previous research as shown with data centers, HPC can also be considered 
 To enable this, automation technologies, which can link the HPC data centers with the electric grid, 
 and on-site power management strategies for different timescales for grid services will play a key role in ease of adoption and lowering the participation costs.
 
-DR market:
+Electriicty markets: 
+One of the key enabler for HPC data centers to participate in electriicty markets (e.g., demand response, electricity prices)
+is the markets that value their participation. 
+In other areas of commercial buildings and select industrial facilities, benefits to both electricity service providers and customers are well documented.
+However, as the electric grid and new dynamic loads such as HPCs evlove, the markets need mechanisms to identify and provide value of participation (e.g., cost, energy, carbon). 
+(LIST SOME KEY FINDINGS FROM QUESTIONNAIRE)
 
-value proposition,
+value proposition, (INCLUDED IN THE ELECTRICITY MARKETS ABOVE)
 
-the measurement and verification models,
+the measurement and verification models, (LISTED BELOW)
 
-patents,
+patents, (NOT SURE WHAT THIS IS AND WHY THIS IS RELEVANT)
 
-intellectual property
+intellectual property (NOT SURE WHAT THIS IS AND WHY THIS IS RELEVANT)
 
 lighting, and heating, ventilation, and air conditioning (HVAC)
 
-electricity-price markets
+
+electricity-price markets (INCLUDED IN THE ELECTRICITY MARKETS ABOVE)
 
 interoperability
 
