--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -38,7 +38,11 @@ patents, (NOT SURE WHAT THIS IS AND WHY THIS IS RELEVANT)
 intellectual property (NOT SURE WHAT THIS IS AND WHY THIS IS RELEVANT)
 
 lighting, and heating, ventilation, and air conditioning (HVAC)
-
+It is clear from the HPC operation that the largest opportunity for load management exists in the IT equipment.
+However, the previous work suggests that the opportunity in HVAC loads may also be an immediate opportunity. 
+The opportunity depends on the ratio of cooling loads to the IT equipment load (e.g., PUE).
+Considering that the lighting loads are a small percentage of overall HPC load, their participation alongside other strategies (IT equipment and HVAC) may prove beneficial. 
+The advancement in technologies and vendor recognition to provide more dynamic power management capabilities in the IT equipment offers larger opportunity in consolidated IT and cooling load reductions.
 
 electricity-price markets (INCLUDED IN THE ELECTRICITY MARKETS ABOVE)
 
